compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__shadow_imported_function.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4058
expression: "\nimport module.{wibble}\n\npub fn wibble() { Nil }\n"
snapshot_kind: text
---
----- SOURCE CODE
-- module.gleam

pub fn wibble() { Nil }


-- main.gleam

import module.{wibble}

pub fn wibble() { Nil }


----- WARNING
warning: Unused imported module
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ import module.{wibble}
  │ ^^^^^^^^^^^^^^^^^^^^^^ This imported module is never used

Hint: You can safely remove it.

warning: Shadowed Import
  ┌─ /src/warning/wrn.gleam:4:1
  │
4 │ pub fn wibble() { Nil }
  │ ^^^^^^^^^^^^^^^ `wibble` is defined here

Definition of wibble shadows an imported value.
The imported value could not be used in this module anyway.
Hint: Either rename the definition or remove the import.
