compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__todo_used_as_function_3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1740
expression: "pub fn main() {\n          todo(1, Nil)\n        }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
          todo(1, Nil)
        }

----- WARNING
warning: Todo found
  ┌─ /src/warning/wrn.gleam:2:11
  │
2 │           todo(1, Nil)
  │           ^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.

Hint: I think its type is `fn(Int, Nil) -> a`.


warning: Todo used as a function
  ┌─ /src/warning/wrn.gleam:2:16
  │
2 │           todo(1, Nil)
  │                ^^^^^^

`todo` is not a function and will crash before it can do anything with
these arguments.

Hint: if you want to display an error message you should write
`todo as "my error message"`
See: https://tour.gleam.run/advanced-features/todo/
