compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__todo_warning_correct_location.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 25
expression: "pub fn main() {\n        todo\n      }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
        todo
      }

----- WARNING
warning: Todo found
  ┌─ /src/warning/wrn.gleam:2:9
  │
2 │         todo
  │         ^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.
