compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__todo_warning_test.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 19
expression: "pub fn main() { 1 == todo }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { 1 == todo }

----- WARNING
warning: Todo found
  ┌─ /src/warning/wrn.gleam:1:22
  │
1 │ pub fn main() { 1 == todo }
  │                      ^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.

Hint: I think its type is `Int`.
