compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__todo_with_known_type.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 34
expression: "pub fn main() -> String {\n  todo\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() -> String {
  todo
}

----- WARNING
warning: Todo found
  ┌─ /src/warning/wrn.gleam:2:3
  │
2 │   todo
  │   ^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.

Hint: I think its type is `String`.
